Jetty 12 버전업
Jetty 12 jetty-maven-plugin은 groupId, artifactId가 바뀌었다.
관련 해서 pom.xml 상속 구조를 바꿈.