@@ -23,7 +23,7 @@
 
     <org.springframework-version>5.3.31</org.springframework-version>
 
-    <spring-security.version>5.8.8</spring-security.version>
+    <spring-security.version>5.8.9-SNAPSHOT</spring-security.version>
 
     <org.aspectj-version>1.9.20.1</org.aspectj-version>
 
@@ -56,17 +56,6 @@
     <hsqldb.version>2.7.2</hsqldb.version>
 
     <thumbnailator.version>0.4.20</thumbnailator.version>
-    <!-- 
-      1. web.xml기반 설정 프로젝트에서 소스파일 변경으로 Jetty의 자동재시작이 일어날때, 
-         예외가 발생하여, 9.x에서 10.x로 버전업 해봤는데, 버전 문제는 아닌 것 같다.
-         버전업을 해도 원인은 동일함, JavaConfig 설정으로 사용하는 프로젝트에서는 오류가 발생하지 않고 정상 재시작한다..
-    
-         https://github.com/eclipse/jetty.project/issues/4076
-              
-      2. Jetty 11.x버전은 주요 서블릿 패키지명이 바뀌였기 때문에 Spring 5에서 사용할 수 없다.          
-         https://stackoverflow.com/questions/66217350/deploying-spring-5-x-on-tomcat-10-x-with-jakarta-package        
-    -->
-    <jetty.version>10.0.18</jetty.version>
 
     <junit.jupiter.version>5.10.1</junit.jupiter.version>
 
@@ -91,8 +80,20 @@
     <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
     <maven-toolchains-plugin.version>3.1.0</maven-toolchains-plugin.version>
 
-    <!-- Jetty일 때는 provided, Tomcat일 때는 compile로 설정하기위해 프로퍼티로 분리했다. -->
-    <jstl-scope.type>provided</jstl-scope.type>
+    <!-- WAS에 따라서 JSTL포함되어있는 경우가 있음 (예: Jetty), 기본은 포함되지 않은 것으로 설정 -->
+    <jstl-scope.type>compile</jstl-scope.type>
+
+    <!-- 
+      1. web.xml기반 설정 프로젝트에서 소스파일 변경으로 Jetty의 자동재시작이 일어날때, 
+         예외가 발생하여, 9.x에서 10.x로 버전업 해봤는데, 버전 문제는 아닌 것 같다.
+         버전업을 해도 원인은 동일함, JavaConfig 설정으로 사용하는 프로젝트에서는 오류가 발생하지 않고 정상 재시작한다..
+    
+         https://github.com/eclipse/jetty.project/issues/4076
+              
+      2. Jetty 11.x버전은 주요 서블릿 패키지명이 바뀌였기 때문에 Spring 5에서 사용할 수 없다.          
+         https://stackoverflow.com/questions/66217350/deploying-spring-5-x-on-tomcat-10-x-with-jakarta-package        
+    -->
+    <jetty.version>10.0.18</jetty.version>
     
     <!-- Jetty Http 포트 기본값 -->
     <jetty.port>8080</jetty.port>
@@ -111,6 +112,21 @@
     <cargo-context-path>${jetty-context-path}</cargo-context-path>
     <cargo-server-port>${jetty.port}</cargo-server-port>
   </properties>
+
+  <!-- 
+    스프링 시큐리티 관련해서는...
+    스냅샷 버전 써야할 때도 있어서, 추가해둔다. 
+  -->
+  <repositories>
+    <repository>
+      <id>spring-snapshots</id>
+      <name>Spring Snapshots</name>
+      <url>https://repo.spring.io/snapshot</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 
 
   <dependencyManagement>
@@ -147,63 +163,6 @@
   </dependencyManagement>
 
   <profiles>
-    <!-- Jetty 기본 웹 애플리케이션 실행  -->
-    <profile>
-      <id>jetty-run</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <properties>
-        <jstl-scope.type>provided</jstl-scope.type>
-      </properties>
-      <build>
-        <plugins>
-          <!-- Jetty 서버 구동 -->
-          <!-- 도움말 자세히보기: mvnw jetty:help -Ddetail=true -Dgoal=run -->
-          <plugin>
-            <!-- https://www.eclipse.org/jetty/documentation/jetty-10/programming-guide/index.html#jetty-maven-plugin -->
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-maven-plugin</artifactId>
-            <version>${jetty.version}</version>
-            <configuration>
-              <httpConnector>
-                <!--host>localhost</host-->
-                <port>${jetty.port}</port>
-              </httpConnector>
-              <webApp>
-                <contextPath>${jetty-context-path}</contextPath>
-                <descriptor>${web-xml-location}</descriptor>
-                <sessionHandler>
-                  <sessionIdPathParameterName>none</sessionIdPathParameterName>
-                </sessionHandler>
-              </webApp>
-              <deployMode>EMBED</deployMode>
-              <stopKey>CTRL+C</stopKey>
-              <stopPort>8999</stopPort>
-              <!-- 9.x 설정: <scanIntervalSeconds> 대신 <scan> 사용 -->
-              <!-- 
-                변경 감지 자동 재시작시 ContextLoaderListener가 제대로 실행되지 않는 오류가 발생한다.
-                설정을 -1로하여 자동 재시작이 일어나지 않도록 한다.
-               -->
-              <scan>${jetty-auto-deploy-seconds}</scan>
-              <scanTargetPatterns>
-                <scanTargetPattern>
-                  <directory>src/main/webapp/WEB-INF</directory>
-                  <includes>
-                    <include>**/*.properties</include>
-                    <include>**/*.xml</include>
-                  </includes>
-                  <excludes>
-                    <exclude>**/*.jsp</exclude>
-                  </excludes>
-                </scanTargetPattern>
-              </scanTargetPatterns>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
     <!-- Tomcat 기본 웹 애플리케이션 실행  -->
     <profile>
       <id>tomcat-run</id>
@@ -251,68 +210,6 @@
                   </properties>
                 </deployable>
               </deployables>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <!-- Jetty - Scouter를 활성화하여 웹 애플리케이션 실행 -->
-    <profile>
-      <id>jetty-run-with-scouter</id>
-      <properties>
-        <jstl-scope.type>provided</jstl-scope.type>
-      </properties>
-      <build>
-        <plugins>
-          <!-- Jetty 서버 구동 -->
-          <!-- 도움말 자세히보기: mvnw jetty:help -Ddetail=true -Dgoal=run -->
-          <plugin>
-            <!-- https://www.eclipse.org/jetty/documentation/jetty-10/programming-guide/index.html#jetty-maven-plugin -->
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-maven-plugin</artifactId>
-            <version>${jetty.version}</version>
-            <configuration>
-              <httpConnector>
-                <!--host>localhost</host-->
-                <port>${jetty.port}</port>
-              </httpConnector>
-              <!-- jvmArgs는 FORK 모드에서만 동작한다. -->
-              <jvmArgs><!-- 
-                  -->-javaagent:${scouter.agent.lib} <!--
-                  -->--illegal-access=warn <!--
-                  -->--add-opens=java.base/java.lang=ALL-UNNAMED <!--
-                  -->-Djdk.attach.allowAttachSelf=true <!--
-                  -->-Dscouter.config=${project.basedir}/../../${scouter.config.file} <!--
-              --></jvmArgs>
-              <webApp>
-                <contextPath>${jetty-context-path}</contextPath>
-                <descriptor>${web-xml-location}</descriptor>
-                <sessionHandler>
-                  <sessionIdPathParameterName>none</sessionIdPathParameterName>
-                </sessionHandler>
-              </webApp>
-              <deployMode>FORK</deployMode>
-              <stopKey>CTRL+C</stopKey>
-              <stopPort>8999</stopPort>
-              <!-- 9.x 설정: <scanIntervalSeconds> 대신 <scan> 사용 -->
-              <!-- 
-                변경 감지 자동 재시작시 ContextLoaderListener가 제대로 실행되지 않는 오류가 발생한다.
-                설정을 -1로하여 자동 재시작이 일어나지 않도록 한다.
-               -->
-              <scan>${jetty-auto-deploy-seconds}</scan>
-              <scanTargetPatterns>
-                <scanTargetPattern>
-                  <directory>src/main/webapp/WEB-INF</directory>
-                  <includes>
-                    <include>**/*.properties</include>
-                    <include>**/*.xml</include>
-                  </includes>
-                  <excludes>
-                    <exclude>**/*.jsp</exclude>
-                  </excludes>
-                </scanTargetPattern>
-              </scanTargetPatterns>
             </configuration>
           </plugin>
         </plugins>
